# dynamic-amm-sdk

./: Cargo.toml
common/: Cargo.toml
docs/: arbitrage_implementation_guide.md  compute_quote_analysis.md  instruction_account_analysis.md  meteora_account_monitoring_strategy.md  optimize_virtual_price_update.md
dynamic-amm-quote/: Cargo.toml
dynamic-amm-quote/src/: lib.rs
dynamic-amm-quote/src/depeg/: spl_stake.rs
programs/dynamic-amm/: Cargo.toml
programs/dynamic-vault/: Cargo.toml
rust-client/: Cargo.toml
