[workspace]
members = ["programs/*", "rust-client", "dynamic-amm-quote", "common"]
resolver = "2"

[workspace.package]
version = "0.0.5"
authors = ["Andrew"]
edition = "2021"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"