[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = { version = "0.31.0" }
anchor-spl = "0.31.0"
solana-sdk = { version = "2.1.0" }
spl-associated-token-account = "6.0.0"
mpl-token-metadata = "5.1.1"
dynamic-amm = { path = "../programs/dynamic-amm" }
dynamic-vault = { path = "../programs/dynamic-vault" }
lazy_static = "1.4.0"

[features]
devnet = []
