[package]
name = "dynamic-amm-quote"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_amm_quote"

[dependencies]
log = "0.4.22"
env_logger = "0.11.0"
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
prog_dynamic_amm = { path = "../programs/dynamic-amm", package = "dynamic-amm" }
prog_dynamic_vault = { path = "../programs/dynamic-vault", package = "dynamic-vault" }
anyhow = "1.0.57"
borsh-v1 = { package = "borsh", version = "1.5.7" }
spl-token-swap = "3.0.0"
meteora-marinade-sdk = { version = "0.1.0", features = ["cpi"] }
spl-stake-pool = {  version = "2.0.0", features = ["no-entrypoint"]}
meteora-stable-swap-math = { git = "https://github.com/mercurial-finance/stable-swap", rev = "140c2e0d366765d49edc9a175ed12b1ad10c3b66", package = "stable-swap-math" }
meteora-stable-swap-client = { git = "https://github.com/mercurial-finance/stable-swap", rev = "140c2e0d366765d49edc9a175ed12b1ad10c3b66", package = "stable-swap-client" }

[dev-dependencies]
solana-program-test = "2.1.0"
anchor-client = "0.31.0"
solana-sdk = "2.1.0"
bincode = "1.3.3"
