[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
anchor-client = "0.31.0"
clap = { version = "3.2.25", features = ["derive", "env"] }
solana-program = "2.1.0"
solana-rpc-client = { version = "2.1.0" }
solana-sdk = "2.1.0"
solana-borsh = "=2.1.0"
zeroize = "=1.8.1"
spl-associated-token-account = "6.0.0"
anyhow = "1.0.57"
spl-token = "7.0.0"
bincode = "1.3.3"
serde = "1.0.137"
serde_json = "1.0.102"
mpl-token-metadata = "3.2.3"
prog_dynamic_amm = { path = "../programs/dynamic-amm", package = "dynamic-amm" }
prog_dynamic_vault = { path = "../programs/dynamic-vault", package = "dynamic-vault" }
regex = "1"
dynamic-amm-quote = { path = "../dynamic-amm-quote" }
common = { path = "../common" }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"